--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -134,4 +134,21 @@
     margin: auto;
     margin-top: 20px;
   }
+
+  .timeline ul li:hover {
+    /* background-color: #071f2a; */
+    transform: scale(1) translateX(0px);
+    transition: 1s;
+  }
+  
+  .timeline ul li:before {
+    transition: 1s;
+  }
+  
+  .timeline ul li:hover:before {
+    background-color: #0f0;
+    box-shadow: 0px 0px 10px 2px #0f0;
+    transform: scale(1) translateX(-10px);
+    transition: 1s;
+  }
 }
